css/neomorphic.css
:root {
  --bs-blue: #1859f1;
  --bs-indigo: #6610f2;
  --bs-purple: #9f1ae2;
  --bs-pink: #d63384;
  --bs-red: #dc3545;
  --bs-orange: #fd7e14;
  --bs-yellow: #ffc107;
  --bs-green: #198754;
  --bs-teal: #20c997;
  --bs-cyan: #0dcaf0;
  --bs-white: #fff;
  --bs-black: #000;
  --bs-gray: #3C3C3C;
  --bs-gray-dark: #343a40;
  --bs-gray-100: #f8f9fa;
  --bs-gray-200: #e9ecef;
  --bs-gray-300: #dee2e6;
  --bs-gray-400: #ced4da;
  --bs-gray-500: #adb5bd;
  --bs-gray-600: #3b3d43;
  --bs-gray-700: #2f3135;
  --bs-gray-800: #232428;
  --bs-gray-900: #17181a;
  --bs-primary: #1b7ced;
  --bs-secondary: #9f1ae2;
  --bs-success: #198754;
  --bs-info: #0dcaf0;
  --bs-warning: #ffc107;
  --bs-danger: #dc3545;
  --bs-light: #f8f9fa;
  --bs-dark: #212121;
  --bs-primary-rgb: 41, 55, 240;
  --bs-secondary-rgb: 159, 26, 226;
  --bs-success-rgb: 25, 135, 84;
  --bs-info-rgb: 13, 202, 240;
  --bs-warning-rgb: 255, 193, 7;
  --bs-danger-rgb: 220, 53, 69;
  --bs-light-rgb: 248, 249, 250;
  --bs-dark-rgb: 33, 37, 41;
  --bs-white-rgb: 255, 255, 255;
  --bs-black-rgb: 0, 0, 0;
  --bs-body-color-rgb: 33, 37, 41;
  --bs-body-bg-rgb: 255, 255, 255;
  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
  --bs-body-font-family: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
  --bs-body-font-size: 1rem;
  --bs-body-font-weight: 500;
  --bs-body-line-height: 1.5;
  --bs-body-color: #212121;
  --bs-body-bg: #fff;

  --h1: 4px;
  --h2: -4px;
  --v1: 4px;
  --v2: -4px;
  --blur1: 12px;
  --blur2: 12px;
  --blur-small1: 8px;
  --blur-small2: 8px;
  --color-dark-shadow: var(--bs-gray-900);
  --color-light-shadow: var(--bs-gray-600);
  --color-transparent: rgba(0,0,0,0);
  --bg-angle: 45;
}

body {
  background: var(--bs-gray-800);
  color: var(--bs-light);
}

a {
  color: var(--color-secondary);
}

.navbar {
  padding: 1em;
  box-shadow: 0px 0px 50px var(--bs-black);
  background: var(--bs-gray-800);
}

.navbar .navbar-brand:hover {
  color: var(--bs-primary);
}

.navbar .nav-item .nav-link {
  border-left: 4px solid rgba(0,0,0,0);
}

.navbar .nav-item .nav-link:hover {
  color: var(--bs-primary);
  border-left: 4px solid var(--bs-primary);
}

.navbar .nav-item .nav-link:active {
  border-left: 4px solid var(--bs-primary);
}

.btn {
  background: var(--bs-gray-800);
  border: none;
  box-shadow: var(--h1) var(--v1) var(--blur-small1) var(--color-dark-shadow),
              var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);

}

.btn:hover {
  background: var(--bs-gray-800);
  color: var(--bs-primary);
  box-shadow: inset var(--h1) var(--v1) var(--blur-small1) var(--color-dark-shadow),
              inset var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
}

.card {
  margin: auto;
  background-color: var(--bs-gray-800);
}

.title {
  padding-bottom: 4em;
}

.card-hover:hover {
  box-shadow: inset var(--h1) var(--v1) var(--blur1) var(--color-dark-shadow),
              inset var(--h2) var(--v2) var(--blur2) var(--color-light-shadow);
}

.card-social {
  border-radius: 50rem;
  text-decoration: none;
  box-shadow: inset var(--h1) var(--v1) var(--blur-small1) var(--color-transparent),
              inset var(--h2) var(--v2) var(--blur-small2) var(--color-transparent);
  -webkit-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.card-social:hover {
  color: var(--bs-primary);
  box-shadow: inset var(--h1) var(--v1) var(--blur-small1) var(--color-dark-shadow),
              inset var(--h2) var(--v2) var(--blur-small2) var(--color-light-shadow);
  -webkit-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.card-hover::after {
  content: "";
  position: absolute;
  border-radius: 10px;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-shadow: var(--h1) var(--v1) var(--blur1) var(--color-dark-shadow),
              var(--h2) var(--v2) var(--blur2) var(--color-light-shadow);
}

.card-social::after {
  border-radius: 50rem;
  -webkit-transition: all 0.1s ease-in-out;
  transition: all 0.1s ease-in-out;
}

.card-hover:hover::after {
  opacity: 0;
}

